# blockscout-exex

./: .gitignore  AGENTS.md  BENCHMARKING.md  Cargo.toml  DEPLOYMENT.md  QUICKSTART.md  README.md
.claude-collective/: package-lock.json
.claude-collective/metrics/: metrics-20251205.json  metrics-20251206.json
.claude/agents/: npx-package-agent.md
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
benches/: fdb_vs_mdbx.rs  mdbx_bench.rs
deploy/: blockscout-api.service  blockscout-subscriber.service
docs/: API_ENDPOINTS.md
examples/: test_buffer_pool.rs
reth/: README.md  docker-compose.yml  reth.toml  run-reth.sh
scripts/: deploy.sh  rollback.sh  setup-monitoring.sh
src/: api.rs  buffer_pool.rs  cache.rs  exex.rs  fdb_index.rs  index_db.rs  index_trait.rs  lib.rs  main.rs  mdbx_index.rs  meili.rs  reth_reader.rs  rpc_executor.rs  transform.rs  websocket.rs
tests/: api_backend_tests.rs  deployment_test.rs  mdbx_index_test.rs
