[package]
name = "blockscout-exex"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Blockscout-compatible indexer as a Reth ExEx sidecar"

[[bin]]
name = "blockscout-exex"
path = "src/main.rs"

[[bin]]
name = "blockscout-backfill"
path = "src/bin/backfill.rs"

[[bin]]
name = "blockscout-api"
path = "src/bin/api.rs"

[[bin]]
name = "blockscout-subscriber"
path = "src/bin/subscriber.rs"

[dependencies]
# Database - use redb for simplicity (pure Rust, no FFI issues)
redb = "2"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"

# HTTP client for backfill
reqwest = { version = "0.12", features = ["json"] }
hex = "0.4"

# Utils
eyre = "0.6"
alloy-primitives = "0.8"
alloy-sol-types = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

# API server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.5"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }

# WebSocket for live subscription
tokio-tungstenite = "0.26"

# For reading reth DB directly
reth-db = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.0", optional = true }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.0", optional = true }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.0", optional = true }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.0", optional = true }

[features]
default = []
reth = ["reth-db", "reth-provider", "reth-primitives", "reth-chainspec"]

[dev-dependencies]
tempfile = "3"
