[package]
name = "blockscout-exex"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Blockscout-compatible indexer as a Reth ExEx sidecar"

[[bin]]
name = "blockscout-exex"
path = "src/main.rs"

[[bin]]
name = "blockscout-backfill"
path = "src/bin/backfill.rs"

[[bin]]
name = "blockscout-api"
path = "src/bin/api.rs"

[[bin]]
name = "blockscout-subscriber"
path = "src/bin/subscriber.rs"

[[bin]]
name = "blockscout-migrate"
path = "src/bin/migrate.rs"

[dependencies]
# Database - FoundationDB for distributed key-value storage
foundationdb = { version = "0.9", features = ["embedded-fdb-include", "fdb-7_1"], optional = true }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"

# HTTP client for backfill
reqwest = { version = "0.12", features = ["json"] }
hex = "0.4"

# Utils
eyre = "0.6"
alloy-primitives = "1.4"
alloy-sol-types = "1.4"
alloy-eips = { version = "1.0", optional = true }
alloy-consensus = { version = "1.0", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

# API server
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.5"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }

# WebSocket for live subscription
tokio-tungstenite = "0.26"

# Search
meilisearch-sdk = "0.27"

# Probabilistic data structures
hyperloglogplus = "0.4"
ahash = { version = "0.8", features = ["serde"] }

# Caching
dashmap = "5.5"
parking_lot = "0.12"

# Lock-free data structures for buffer pooling
crossbeam-queue = "0.3"

# For reading reth DB directly and MDBX support
reth-db = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.9.3", optional = true }
reth-db-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.9.3", optional = true }
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.9.3", optional = true }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.9.3", optional = true }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.9.3", optional = true }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.9.3", optional = true }
reth-node-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.9.3", optional = true }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.9.3", optional = true }
chrono = "0.4.42"

[features]
default = ["fdb"]
fdb = ["foundationdb"]
mdbx = ["reth"]
reth = ["alloy-eips", "alloy-consensus", "reth-db", "reth-db-api", "reth-libmdbx", "reth-provider", "reth-primitives", "reth-chainspec", "reth-node-types", "reth-node-ethereum"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "fdb_vs_mdbx"
harness = false
